# aiogram-bot-template

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
src/bot/handlers/: __init__.py  start.py
src/db/: database.py  models.py
src/repositories/: user_repository.py
src/services/: user_service.py
